added java.security.manager to restrict rights